# http-server-module-cpp

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md
.claude/: CLAUDE.md
.claude/rules/: tool-priority.md
examples/: CMakeLists.txt  direct_routes_example.cpp  stream_sse_example.cpp
guides/: README.md  cpp_style.md
include/: http_server.hpp
include/http_server/: config.hpp  enums.hpp  headers.hpp  http_server_module.hpp  request.hpp  response.hpp  response_writer.hpp  route.hpp  route_registry.hpp  stream_session.hpp
include/http_server/backend/: i_http_server_backend.hpp  simple_web_server_backend.hpp
include/http_server/event_hub/: event_route_adapter.hpp
include/http_server/events/: http_server_events.hpp
src/: http_server_module.cpp
src/backend/: simple_web_server_backend.cpp
src/http_server/: headers.hpp  http_server_module.hpp  request.hpp  response.hpp  response_writer.hpp  route.hpp  route_registry.hpp  stream_session.hpp  version.hpp
src/http_server/backend/: i_http_server_backend.hpp  simple_web_server_backend.hpp
src/http_server/event_hub/: event_route_adapter.hpp
src/http_server/utils/: request_id.cpp  request_id.hpp
tests/: CMakeLists.txt  headers_tests.cpp  integration_tests.cpp  response_data_tests.cpp  route_registry_tests.cpp  stream_session_tests.cpp
